[gd_scene load_steps=3 format=3 uid="uid://7kocho1pi4hu"]

[ext_resource type="FontFile" uid="uid://ck0gmjka1c36g" path="res://Assets/Font/RobotoMono-Bold.ttf" id="1_16066"]
[ext_resource type="Script" path="res://Code/OmegaManager.gd" id="1_mykr4"]

[node name="Menu" type="Popup"]
position = Vector2i(365, 0)
size = Vector2i(650, 650)
visible = true
script = ExtResource("1_mykr4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.584314, 0.384314, 0.258824, 1)

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="TabBar" parent="TabContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_16066")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="GridContainer" parent="TabContainer/Video/MarginContainer"]
layout_mode = 2
columns = 2

[node name="ModoPantalla" type="Label" parent="TabContainer/Video/MarginContainer/Video"]
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.556863, 0.52549, 1)
theme_override_font_sizes/font_size = 28
text = "DISPLAY MODE:"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Video/MarginContainer/Video"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.129412, 0.6, 0.623529, 1)
theme_override_fonts/font = ExtResource("1_16066")
item_count = 2
selected = 1
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Window"
popup/item_1/id = 1

[node name="Vsync" type="Label" parent="TabContainer/Video/MarginContainer/Video"]
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.556863, 0.52549, 1)
theme_override_font_sizes/font_size = 28
text = "Vsync:
"

[node name="CheckButton" type="CheckButton" parent="TabContainer/Video/MarginContainer/Video"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Pixelate" type="Label" parent="TabContainer/Video/MarginContainer/Video"]
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.556863, 0.52549, 1)
theme_override_font_sizes/font_size = 28
text = "Pixelation:"

[node name="HSlider4" type="HSlider" parent="TabContainer/Video/MarginContainer/Video"]
custom_minimum_size = Vector2(186.08, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
min_value = 1.0
max_value = 5.0
value = 2.0

[node name="Audio" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
layout_mode = 0
offset_top = 33.14
offset_right = 357.0
offset_bottom = 167.14

[node name="GridContainer" type="GridContainer" parent="TabContainer/Audio/MarginContainer"]
layout_mode = 2
columns = 2

[node name="Master" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.556863, 0.52549, 1)
theme_override_font_sizes/font_size = 28
text = "Master:
"

[node name="HSlider" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.556863, 0.52549, 1)
theme_override_font_sizes/font_size = 28
text = "Music:"

[node name="HSlider2" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.611765, 0.556863, 0.52549, 1)
theme_override_font_sizes/font_size = 28
text = "SFX:"

[node name="HSlider3" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Feel" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Feel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Feel/MarginContainer"]
layout_mode = 2
columns = 2

[node name="Master" type="Label" parent="TabContainer/Feel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.304688, 0.894531, 0.925781, 1)
theme_override_font_sizes/font_size = 28
text = "Master:
"

[node name="HSlider" type="HSlider" parent="TabContainer/Feel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="Label" parent="TabContainer/Feel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.304688, 0.894531, 0.925781, 1)
theme_override_font_sizes/font_size = 28
text = "Music:"

[node name="HSlider2" type="HSlider" parent="TabContainer/Feel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX" type="Label" parent="TabContainer/Feel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.304688, 0.894531, 0.925781, 1)
theme_override_font_sizes/font_size = 28
text = "SFX:"

[node name="HSlider3" type="HSlider" parent="TabContainer/Feel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[connection signal="item_selected" from="TabContainer/Video/MarginContainer/Video/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="TabContainer/Video/MarginContainer/Video/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="TabContainer/Video/MarginContainer/Video/HSlider4" to="." method="_on_h_slider_4_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="value_changed" from="TabContainer/Feel/MarginContainer/GridContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Feel/MarginContainer/GridContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="TabContainer/Feel/MarginContainer/GridContainer/HSlider3" to="." method="_on_h_slider_3_value_changed"]
